--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -80,32 +80,58 @@ Red line is $100 of equal weighting of <%= selected_symbols %>.
 	<tr>
 		<td></td>
 		<td colspan=<%= selected_symbols.count %>>Closing Prices</td>
-		<td>Combined $ Return</td>
+		<td colspan=<%= selected_symbols.count %>>Total $ Returns</td>
+		<td colspan=<%= selected_symbols.count %>>Total % Returns</td>
+		<td colspan=2>Combined</td>
 	</tr>
 	<tr>
 		<td>Date</td>
 		<% selected_symbols.each do |symbol| %>
 		<td>c<%= symbol %></td>
 		<% end %>
-		<td>Combo</td>
+		<% selected_symbols.each do |symbol| %>
+		<td><%= symbol %></td>
+		<% end %>
+		<% selected_symbols.each do |symbol| %>
+		<td><%= symbol %></td>
+		<% end %>
+		<td>%</td>
+		<td>$</td>
 	</tr>
 	
 <% 
 i = 0
-j = 0
 
 while i < @all_quotes[0].count do 
 	%>
 	<tr>
 		<td><%= @all_quote_dates[0][i] %></td>
 	<%
+	j = 0
 	while j < @all_quotes.count do
 		%>
 		<td><%= @all_quotes[j][i] %></td>
 		<%
 		j += 1
 	end
+	
+	j = 0
+	while j < @all_quotes.count do
+		%>
+		<td><%= @all_total_returns[i][j].round(2) %></td>
+		<%
+		j += 1
+	end
+
+	j = 0
+	while j < @all_quotes.count do
+		%>
+		<td><%= (100 * @all_percent_returns[i][j]).round(1) %></td>
+		<%
+		j += 1
+	end
 	%>
+		<td><%= (100 * @all_combined_returns[i]).round(4) %></td>
 		<td><%= selected_returns[i].round(2) %></td>
 	</tr>
 	<%
