--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,7 @@
 <script type="text/javascript" src="http://www.shawnolson.net/scripts/public_smo_scripts.js"></script>
 
+<h3>test site being used for development of the vest me model</h3>
+
 <% if params['commit'] == nil %>
 <p>Compare against S&amp;P 500.  Choose either Equal or Custom weighting, select the symbols to include, and click Compare.  If choosing custom, add the percent weighting for the selected symbol to the right.  Note: percentages must add up to 100.</p>
 <%= form_tag('/', :method => :get) do %>
